Add images to index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <h1>山形の旅館・レストラン【公式】古窯グループ</h1>
+    <h1><img src="images/logo-pc.png" alt="古窯グループ ロゴ">山形の旅館・レストラン【公式】古窯グループ</h1>
     <h2>今日、この瞬間に、最高の山形を。</h2>
     <p>私達はこれまで”山形”という地域そのものを商品として、この地域の良さを発信し、山形の価値を高めたいという強い想いで仕事をしています。この土地ならではの人、風景、食べ物、この土地での様々な体験がお客様の感動につながるため、私達は自信を持って山形の魅力を提供し、どうすれば上手に伝わるかを常々考え仕事をしています。</p>
 
@@ -22,24 +22,28 @@
 
     <h3>グループ施設</h3>
     <h4>泊まる</h4>
+    <p><img src="images/img_koyo.jpg" alt="日本の宿 古窯 外観"></p>
     <ul>
         <li>日本の宿 古窯: 伝統が薫るおもてなしの宿。プロが選ぶ旅館百選TOP10に選ばれ続けるおもてなしの温泉宿。温泉の泉質は「三大美人泉質」として知られています。</li>
         <li>悠湯の郷ゆさ: 蔵王連峰の雄大な姿を臨む絶景大浴場が自慢の宿。旅館の温かさとホテルの快適さをテーマに安らぎのひとときを提供致します。</li>
         <li>おやど 森の音: 緩やかな坂の上、木製の重い扉を開くと、目に飛び込む中庭の光。豊かな自然、いのちを癒す宿をどうぞ思いのまま、お愉しみください。</li>
-        <li>あつみ温泉 萬国屋: 創業三百余年の歴史を持つ老舗旅館。温海岳や温海川など、あつみの自然に囲まれた萬国屋。松尾芭蕉、与謝野晶子など文人墨客が数多く訪れ、詩歌や小説にうたわれました。</li>
+        <li>あつみ温泉 萬国屋: 創業三百余年の歴史を持つ老舗旅館。温海岳や温海川など、あつみ温泉の自然に囲まれた萬国屋。松尾芭蕉、与謝野晶子など文人墨客が数多く訪れ、詩歌や小説にうたわれました。</li>
     </ul>
 
     <h4>味わう</h4>
+    <p><img src="images/img_prin.jpg" alt="山形プリン"></p>
     <ul>
         <li>山形プリン: 新鮮素材を使用したプリン専門店。地元かみのやまで、山形県産の素材を活かした「美味しいスイーツをつくりたい」という想いから菓子づくりが始まりました。</li>
     </ul>
 
     <h4>体験する</h4>
+    <p><img src="images/img_wedd.jpg" alt="KOYO Wedding"></p>
     <ul>
         <li>KOYO Wedding: 雅楽の音色が鳴り響く、神前式場。日本の伝統美を体感する雰囲気たっぷりの和風ウェディング。和風旅館ならではの落ち着いた結婚式は、ゲストにも大好評です。</li>
     </ul>
 
     <h3>採用情報</h3>
+    <p><img src="images/recruit_main.jpg" alt="古窯グループ 採用情報"></p>
     <p>古窯グループで私たちと一緒に働きませんか？働くメンバー一人一人が山形の魅力を伝えるパフォーマーであり”山形で働くこと”そのものが自然と山形のファンを増やすことにつながっていく会社です。「お客様の喜びを我が喜びとする」様々な職種が集まり協力して一つのサービスを提供する古窯グループのメンバーを募集しております。</p>
 
     <p>Copyright 2020–2025 koyo All Rights Reserved.</p>
