Add common.css and link to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="山形,旅館,レストラン,宿泊,旅行,温泉,プリン,山形牛,米沢牛">
     <meta name="description" content="古窯グループ公式サイトです。「今日、この瞬間に、最高の山形を。」を理念に山形や東京で旅館やレストラン展開を行っています。この地域の良さを発信し、山形の価値を高めたいという強い想いで仕事をしています。">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/common.css">
 </head>
 <body>
     <h1><img src="images/logo-pc.png" alt="古窯グループ ロゴ">山形の旅館・レストラン【公式】古窯グループ</h1>
