Add company information to index.html

--- a/index.html
+++ b/index.html
@@ -48,5 +48,44 @@
     <p>古窯グループで私たちと一緒に働きませんか？働くメンバー一人一人が山形の魅力を伝えるパフォーマーであり”山形で働くこと”そのものが自然と山形のファンを増やすことにつながっていく会社です。「お客様の喜びを我が喜びとする」様々な職種が集まり協力して一つのサービスを提供する古窯グループのメンバーを募集しております。</p>
 
     <p>Copyright 2020–2025 koyo All Rights Reserved.</p>
+
+    <section id="company-info">
+        <h2>会社概要</h2>
+        <table>
+            <tr>
+                <th>会社名</th>
+                <td>株式会社旅館古窯</td>
+            </tr>
+            <tr>
+                <th>所在地</th>
+                <td>〒999-3292 山形県上山市葉山5-20</td>
+            </tr>
+            <tr>
+                <th>設立</th>
+                <td>1964年5月（創業/1951年10月）</td>
+            </tr>
+            <tr>
+                <th>資本金</th>
+                <td>3,300万円</td>
+            </tr>
+            <tr>
+                <th>代表者</th>
+                <td>
+                    代表取締役社長 佐藤 洋詩恵（女将）<br>
+                    代表取締役専務 佐藤 太一（兼 悠湯の郷 ゆさ 総支配人）<br>
+                    常務取締役 佐藤 奈美（若女将）<br>
+                    会長 佐藤 信幸
+                </td>
+            </tr>
+            <tr>
+                <th>事業内容</th>
+                <td>宿泊サービスを始め、ブライダル事業、飲食・レストランなど山形を主としてサービス業を展開しております。</td>
+            </tr>
+            <tr>
+                <th>運営施設</th>
+                <td>日本の宿 古窯、悠湯の郷 ゆさ、おやど 森の音、山形県あつみ温泉 萬国屋、山形プリン、KOYO Wedding</td>
+            </tr>
+        </table>
+    </section>
 </body>
 </html>
