Add img_intr.jpg as hero image and update CSS

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <h1><img src="images/logo-pc.png" alt="古窯グループ ロゴ">山形の旅館・レストラン【公式】古窯グループ</h1>
     <h2>今日、この瞬間に、最高の山形を。</h2>
+    <div class="hero-image">
+        <img src="images/img_intr.jpg" alt="山形の地で楽しく働くこと">
+    </div>
     <p>私達はこれまで”山形”という地域そのものを商品として、この地域の良さを発信し、山形の価値を高めたいという強い想いで仕事をしています。この土地ならではの人、風景、食べ物、この土地での様々な体験がお客様の感動につながるため、私達は自信を持って山形の魅力を提供し、どうすれば上手に伝わるかを常々考え仕事をしています。</p>
 
     <h3>新着情報</h3>
