Apply ryokan-style CSS to headings and adjust logo placement

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="css/common.css">
 </head>
 <body>
-    <h1><img src="images/logo-pc.png" alt="古窯グループ ロゴ">山形の旅館・レストラン【公式】古窯グループ</h1>
+    <img src="images/logo-pc.png" alt="古窯グループ ロゴ" class="site-logo">
+    <h1>山形の旅館・レストラン【公式】古窯グループ</h1>
     <h2>今日、この瞬間に、最高の山形を。</h2>
     <div class="hero-image">
         <img src="images/img_intr.jpg" alt="山形の地で楽しく働くこと">
