--- a/index.html
+++ b/index.html
@@ -27,24 +27,39 @@
 
     <h3>グループ施設</h3>
     <h4>泊まる</h4>
-    <p><img src="images/img_koyo.jpg" alt="日本の宿 古窯 外観"></p>
     <ul>
-        <li>日本の宿 古窯: 伝統が薫るおもてなしの宿。プロが選ぶ旅館百選TOP10に選ばれ続けるおもてなしの温泉宿。温泉の泉質は「三大美人泉質」として知られています。</li>
-        <li>悠湯の郷ゆさ: 蔵王連峰の雄大な姿を臨む絶景大浴場が自慢の宿。旅館の温かさとホテルの快適さをテーマに安らぎのひとときを提供致します。</li>
-        <li>おやど 森の音: 緩やかな坂の上、木製の重い扉を開くと、目に飛び込む中庭の光。豊かな自然、いのちを癒す宿をどうぞ思いのまま、お愉しみください。</li>
-        <li>あつみ温泉 萬国屋: 創業三百余年の歴史を持つ老舗旅館。温海岳や温海川など、あつみ温泉の自然に囲まれた萬国屋。松尾芭蕉、与謝野晶子など文人墨客が数多く訪れ、詩歌や小説にうたわれました。</li>
+        <li>
+            <img src="images/img_koyo.jpg" alt="日本の宿 古窯 外観">
+            <p>日本の宿 古窯: 伝統が薫るおもてなしの宿。プロが選ぶ旅館百選TOP10に選ばれ続けるおもてなしの温泉宿。温泉の泉質は「三大美人泉質」として知られています。</p>
+        </li>
+        <li>
+            <img src="images/img_yusa.jpg" alt="悠湯の郷ゆさ 外観">
+            <p>悠湯の郷ゆさ: 蔵王連峰の雄大な姿を臨む絶景大浴場が自慢の宿。旅館の温かさとホテルの快適さをテーマに安らぎのひとときを提供致します。</p>
+        </li>
+        <li>
+            <img src="images/img_mori.jpg" alt="おやど 森の音 外観">
+            <p>おやど 森の音: 緩やかな坂の上、木製の重い扉を開くと、目に飛び込む中庭の光。豊かな自然、いのちを癒す宿をどうぞ思いのまま、お愉しみください。</p>
+        </li>
+        <li>
+            <img src="images/img_ban.jpg" alt="あつみ温泉 萬国屋 外観">
+            <p>あつみ温泉 萬国屋: 創業三百余年の歴史を持つ老舗旅館。温海岳や温海川など、あつみ温泉の自然に囲まれた萬国屋。松尾芭蕉、与謝野晶子など文人墨客が数多く訪れ、詩歌や小説にうたわれました。</p>
+        </li>
     </ul>
 
     <h4>味わう</h4>
-    <p><img src="images/img_prin.jpg" alt="山形プリン"></p>
     <ul>
-        <li>山形プリン: 新鮮素材を使用したプリン専門店。地元かみのやまで、山形県産の素材を活かした「美味しいスイーツをつくりたい」という想いから菓子づくりが始まりました。</li>
+        <li>
+            <img src="images/img_prin.jpg" alt="山形プリン">
+            <p>山形プリン: 新鮮素材を使用したプリン専門店。地元かみのやまで、山形県産の素材を活かした「美味しいスイーツをつくりたい」という想いから菓子づくりが始まりました。</p>
+        </li>
     </ul>
 
     <h4>体験する</h4>
-    <p><img src="images/img_wedd.jpg" alt="KOYO Wedding"></p>
     <ul>
-        <li>KOYO Wedding: 雅楽の音色が鳴り響く、神前式場。日本の伝統美を体感する雰囲気たっぷりの和風ウェディング。和風旅館ならではの落ち着いた結婚式は、ゲストにも大好評です。</li>
+        <li>
+            <img src="images/img_wedd.jpg" alt="KOYO Wedding">
+            <p>KOYO Wedding: 雅楽の音色が鳴り響く、神前式場。日本の伝統美を体感する雰囲気たっぷりの和風ウェディング。和風旅館ならではの落ち着いた結婚式は、ゲストにも大好評です。</p>
+        </li>
     </ul>
 
     <h3>採用情報</h3>
