feat: スマートフォン表示に対応

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="css/common.css">
 </head>
 <body>
-    <img src="images/logo-pc.png" alt="古窯グループ ロゴ" class="site-logo">
+    <picture class="site-logo">
+        <source srcset="images/logo-sp.png" media="(max-width: 768px)">
+        <img src="images/logo-pc.png" alt="古窯グループ ロゴ">
+    </picture>
     <h1>山形の旅館・レストラン【公式】古窯グループ</h1>
     <h2>今日、この瞬間に、最高の山形を。</h2>
     <div class="hero-image">
