refactor: フッターのコピーライトを修正

--- a/index.html
+++ b/index.html
@@ -69,8 +69,6 @@
     <p><img src="images/recruit_main.jpg" alt="古窯グループ 採用情報"></p>
     <p>古窯グループで私たちと一緒に働きませんか？働くメンバー一人一人が山形の魅力を伝えるパフォーマーであり”山形で働くこと”そのものが自然と山形のファンを増やすことにつながっていく会社です。「お客様の喜びを我が喜びとする」様々な職種が集まり協力して一つのサービスを提供する古窯グループのメンバーを募集しております。</p>
 
-    <p>Copyright 2020–2025 koyo All Rights Reserved.</p>
-
     <section id="company-info">
         <h2>会社概要</h2>
         <table>
@@ -109,5 +107,8 @@
             </tr>
         </table>
     </section>
+    <footer>
+        <p>Copyright 2020–2025 koyo All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
